@@ -293,7 +293,7 @@ function htmlcdnboxes(req,res) {
       '<span class="dnscount">DNSGT(r/s): ' + cdnboxStates.globaldnscount.last + '/' +
       Math.round(cdnboxStates.globaldnscount.average) + '/' +
       Math.round(cdnboxStates.globaldnscount.limit) + '</span></div>' +
-      '<table><tr><th>Name</th><th>BW</th><th>BwT</th><th>Perf4</th><th>Perf6</th><th>Score</th>' +
+      '<table><tr><th>Name</th><th>Trans</th><th>BwT</th><th>Recv</th><th>Perf4</th><th>Perf6</th><th>Score</th>' +
       '<th>Bu.</th><th>HTTP</th><th>DNS</th><th>Tests</th></tr>'
   );
   for (var i=0; i < cdnboxStates.config.cdnboxes.length; i++ ) {
@@ -301,9 +301,10 @@ function htmlcdnboxes(req,res) {
     res.write(
         '<tr><td class="name">' + cdnboxStates.config.cdnboxes[i].name + '</td>' +
         '<td class="bw number' + (cdnboxState.bw > cdnboxState.config.targetbw?' ovbw':'') + '">' +
-        (cdnboxState.bw?Math.round(cdnboxState.bw):'NA') + '</td>' +
+            (cdnboxState.bw?Math.round(cdnboxState.bw):'NA') + '</td>' +
         '<td class="bw number' + (cdnboxState.trendbw > cdnboxState.config.targetbw?' ovbw':'') + '">' +
-        (cdnboxState.trendbw?Math.round(cdnboxState.trendbw):'NA') + '</td>');
+            (cdnboxState.trendbw?Math.round(cdnboxState.trendbw):'NA') + '</td>' +
+        '<td class="bw number">' + (cdnboxState.bwrecv?Math.round(cdnboxState.bwrecv):'NA') + '</td>' );
     if (cdnboxState.status == 'on') {
       res.write('<td class="number bw">' + (cdnboxState.gettime !== undefined?cdnboxState.gettime:'NA') + '</td>');
     } else {
@@ -387,7 +388,7 @@ function htmlconsole(res,token) {
     var cdnboxState = cdnboxStates[cdnboxStates.config.cdnboxes[i].name];
     if (cdnboxState.config.isns) {
       res.write(
-          '<iframe width="510" height="' + (cdnboxStates.config.cdnboxes.length * 25 + 90) + '" src="' +
+          '<iframe width="540" height="' + (cdnboxStates.config.cdnboxes.length * 25 + 90) + '" src="' +
           cdnboxState.config.proto + '//' + cdnboxState.config.hostname + '/cdn/cdnboxes?' +
           token + '"></iframe>\n'
       );
