@@ -199,6 +199,7 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
                 getnetcount(cdnboxState);
                 cdnboxState.bw = lconfig.dnsserver.dnsthrottlebwratio * cdnbox.targetbw + 1;
                 cdnboxState.trendbw = cdnbox.targetbw;
+                cdnboxState.bwrecv = 0;
                 timers.setInterval( function () {
                     return function () { calcbw(cdnboxState); }}(), 2000);
               } else {
@@ -226,27 +227,33 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
 
 // calcul bandwith
 function getnetcount(cdnboxState) {
-  var data = fs.readFileSync('/proc/net/dev','utf8');
+  const netoutre = new RegExp('^.*'+cdnboxState.netint+': +([0-9]+ +){8}([0-9]+) .*$');
+  const netrecvre = new RegExp('^.*'+cdnboxState.netint+': +([0-9]+) +([0-9]+ +){8}.*$');
+  let data = fs.readFileSync('/proc/net/dev','utf8');
   data = data.replace(/\n/g,'');
-  cdnboxState.netcount = 1*data.replace(
-      new RegExp('^.*'+cdnboxState.netint+': +([0-9]+ +){8}([0-9]+) .*$'),"$2");
+  cdnboxState.netcount = 1*data.replace(netoutre, "$2");
   cdnboxState.nettime = Date.now();
+  cdnboxState.netrecvcount = 1*data.replace(netrecvre, "$1");
 }
 
 function calcbw(cdnboxState) {
-  var memcount = cdnboxState.netcount, memtime = cdnboxState.nettime;
+  let memcount = cdnboxState.netcount, memrecvcount = cdnboxState.netrecvcount, memtime = cdnboxState.nettime;
   getnetcount(cdnboxState);
-  var delta = cdnboxState.netcount - memcount;
+  let delta = cdnboxState.netcount - memcount;
   if (delta < 0) { delta = 0 }
   cdnboxState.bw = delta * 8 / (cdnboxState.nettime - memtime) * 1000 / 1024 / 1024;
   cdnboxState.trendbw = (cdnboxState.bw + (14 * cdnboxState.trendbw)) / 15;
+  let deltarecv = cdnboxState.netrecvcount - memrecvcount;
+  if (deltarecv < 0) { deltarecv = 0 }
+  cdnboxState.bwrecv = deltarecv * 8 / (cdnboxState.nettime - memtime) * 1000 / 1024 / 1024;
   if (cdnboxState.bw > 1.1 * cdnboxState.config.targetbw) { cdnboxStates.penalbucket.increase(); }
   var statevector = cdnboxStates.getstatevector();
   var cdnboxlist = Object.getOwnPropertyNames(cdnboxStates.subscribestate);
   for (var i = 0; i < cdnboxlist.length; i++) {
     cdnboxDNSserver.pushdata('pushbwdata', statevector, cdnboxStates[cdnboxlist[i]].ipv4);
   }
-  console.log(' "type": "bw", "bw": ' + cdnboxState.bw + ', "trendbw": ' + cdnboxState.trendbw + ', ' +
+  console.log(' "type": "bw", "bw": ' + cdnboxState.bw + ', "trendbw": ' + cdnboxState.trendbw + ' ,' +
+	      '"bwrecv": ' + cdnboxState.bwrecv + ' ,' + 
               '"penal": ' + Math.floor(cdnboxStates.local.config.penal + cdnboxStates.penalbucket.sigma / 4) + ', ' +
               '"score": '+ (isNaN(cdnboxState.score)?-1:cdnboxState.score) + ', "vol": ' + delta);
 }
@@ -261,6 +268,7 @@ cdnboxStates.getstatevector = function() {
                 cdnboxStates.penalbucket.get());
     return '{"name":"' + cdnboxState.config.name + '", ' +
            '"bw":' + (cdnboxState.bw !== undefined?cdnboxState.bw:-1) + ', ' +
+           '"bwrecv":' + (cdnboxState.bwrecv !== undefined?cdnboxState.bwrecv:-1) + ', ' +
            '"trendbw":' + (cdnboxState.trendbw !== undefined?cdnboxState.trendbw:-1) + ', ' + 
            '"timestamp":' + time + ', ' +
            '"status":"' + cdnboxState.status + '", ' +
@@ -277,7 +285,7 @@ cdnboxStates.putstatevectorhmac = function(statevector) {
     hash.update(data.name + data.bw + data.trendbw + data.timestamp + data.status +
                 JSON.stringify(data.localtests) + data.penalbucket);
     if (hash.digest('base64') == data.hmac) {
-      cdnboxStates.putstatevectorobj(data);
+      putstatevectorobj(data);
     } else {
       logerror('"error": "putstatevectorhmac authentication failed from:' + data.name + '"');
     }
@@ -286,16 +294,7 @@ cdnboxStates.putstatevectorhmac = function(statevector) {
   }
 }
 
-cdnboxStates.putstatevector = function(statevector) {
-  try {
-    var data = JSON.parse(statevector);
-    cdnboxStates.putstatevectorobj(data);
-  } catch (e) {
-    logerror('"error": "putstatevector ' + e.stack.replace(/\n/g,'').substr(0,200) + '"');
-  }
-}
-
-cdnboxStates.putstatevectorobj = function(data) {
+function putstatevectorobj (data) {
     var cdnboxState = cdnboxStates[data.name];
     if (cdnboxState === undefined) { return; }
     if (data.timestamp !== undefined) {
@@ -307,6 +306,7 @@ cdnboxStates.putstatevectorobj = function(data) {
     }
     cdnboxState.bw = data.bw;
     cdnboxState.trendbw = data.trendbw;
+    if (data.bwrecv !== undefined) { cdnboxState.bwrecv = data.bwrecv; }
     if (data.status == 'off' || cdnboxState.status !== 'fail') { cdnboxState.status = data.status; }
     if (data.status6 !== undefined && (data.status6 == 'off' || cdnboxState.status6 !== 'fail')) {
       cdnboxState.status6 = data.status6;
